--- a/01-ejercicio-html-css/css/resultados-detalles.css
+++ b/01-ejercicio-html-css/css/resultados-detalles.css
@@ -276,31 +276,34 @@ body {
   border: 1px solid var(--border);
   border-radius: 1rem;
   overflow: hidden;
-}
 
-.search__result--card {
-  display: flex;
-  flex-direction: row;
-  padding: 2.4rem;
-  justify-content: space-between;
-  background-color: var(--background);
-  border-bottom: 1px solid var(--border);
+  li .search__result--card {
+    display: flex;
+    flex-direction: row;
+    padding: 2.4rem;
+    justify-content: space-between;
+    background-color: var(--background);
+    border-bottom: 1px solid var(--border);
 
-  h3 {
-    margin-bottom: 1.4rem;
+    h3 {
+      margin-bottom: 1.4rem;
+    }
+
+
+    small {
+      display: block;
+      font-size: 1em;
+      margin-bottom: 1.4rem;
+      color: var(--text-muted);
+    }
+
+    p:nth-child(3) {
+      margin-bottom: 2.6rem;
+    }
   }
 
-  &:last-child {
+  li:last-child .search__result--card {
     border-bottom: none;
-  }
-
-  p:nth-child(2) {
-    margin-bottom: 1.4rem;
-    color: var(--text-muted);
-  }
-
-  p:nth-child(3) {
-    margin-bottom: 2.6rem;
   }
 }
 
