--- a/04-ejercicio-react-router-y-estado-global/src/components/Pagination.module.css
+++ b/04-ejercicio-react-router-y-estado-global/src/components/Pagination.module.css
@@ -13,7 +13,7 @@
     text-decoration: none;
     color: var(--text-muted);
     border-radius: 0.375rem;
-    transition: all 0.3s;
+    transition: all .3s;
 
     &:hover,
     &:focus {
@@ -21,13 +21,13 @@
     }
 
     &:active {
-      transform: scale(0.9);
+      transform: scale(0.90);
+    }
+
+    &.isActive {
+      background-color: var(--primary-light);
+      color: white;
+      pointer-events: none;
     }
   }
-}
-
-.isActive {
-  background-color: var(--primary-light);
-  color: white;
-  pointer-events: none;
 }
